
2010-05-26 Serena Ivaldi <serena.ivaldi@iit.it> and Matteo Fumagalli <matteo.fumagalli@iit.it>
	   * First release published on the repository

