@@ -2,4 +2,7 @@
 2010-05-26 Serena Ivaldi <serena.ivaldi@iit.it> and Matteo Fumagalli <matteo.fumagalli@iit.it>
 	   * First release published on the repository
 
+2010-05-27 Serena Ivaldi <serena.ivaldi@iit.it>
+	* added iDynInvSensor-Arm/Leg to iDynInv
+
 
